# riposte-example-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  dependencies.py  main.py
backend/src/api/: attack_surface.py  chat.py  health.py
backend/src/core/: embeddings.py
backend/src/data/: benign_replies.py  corpus.py
backend/src/models/: __init__.py  chat.py
backend/src/repositories/: session_repo.py
backend/src/services/: agent_service.py  guardrail_service.py  rag_service.py  tool_service.py
frontend/: Dockerfile
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/access/: page.tsx
frontend/app/directory/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/it/: page.tsx
frontend/app/portal/: page.tsx
frontend/components/: app-shell.tsx  chat-panel.tsx  directory-panel.tsx  documents-panel.tsx
frontend/components/attack-surface/: admin-access-panel.tsx  browser-lab-panel.tsx  hr-enrollment-panel.tsx  partner-resources-panel.tsx  policy-viewer-panel.tsx  search-tools-panel.tsx  software-catalog-panel.tsx  sso-panel.tsx  ticket-bridge-panel.tsx  vendor-login-panel.tsx
frontend/lib/: api.ts
frontend/public/fixtures/: t1056_portal.html  t1078_admin.html  t1115_clipboard.html  t1133_oauth.html  t1185_session.html  t1189_redirect.html  t1190_errors.html  t1195_update.html  t1566_phishing.html  t1659_injection.html
