[project]
name = "northwind-assistant"
version = "0.1.0"
description = "Northwind Internal Assistant — intentionally vulnerable Riposte demo target"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.42.0",
    "numpy>=2.1.0",
    "httpx>=0.28.0",
]

[project.scripts]
northwind = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
